--- a/_posts/project/2015-07-25-project-3.markdown
+++ b/_posts/project/2015-07-25-project-3.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  "unity game"
 date:   2015-07-25 22:39:56
 categories: project
-featured_image: "/images/project.png"
+featured_image: "/images/portfolio-thumb/space.jpg"
 ---
 
 You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
